@@ -741,7 +741,11 @@
     [/entry]
     [entry]
         name = "Petr Sobotka (Pietro)"
-    [/entry]
+    [/entry] 
+    [entry]
+	name = "Prevost Thomas (zancdar)"
+	email = "thomas.prevost_AT_gmail.com"
+    [/entry]	
     [entry]
         name = "Priit Laes (plaes)"
     [/entry]
