@@ -98,6 +98,8 @@ Version 1.5.0-svn:
    * Add support for overlay terrains (terrains which can be placed above any
      base terrain)
    * Add multiple types for events
+   * Add allow a simple [clear_variable] to clear multiple variables (separated
+     by comma)
  * miscellaneous and bug fixes:
    * Changed logging to have less overhead when it is turned off (patch #1038)
    * Fixed error message for broken add-on campaigns (bug #11078)
